Fix HTML structure and syntax errors in index.html
Fixed HTML structure and corrected syntax errors in the index.html file. Updated links and added missing elements.

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 < 部分 类 = "开心" >
 
                 <h2>游戏特色</h2>
-                <p>我的游戏融合了创新的玩法、精美的画面和引人入胜的故事情节。每一款游戏都是用心打造的精品，旨在为玩家带来最佳的游戏体验。</p>
+                <p>我的游戏融合了创新的玩法、精美的画面和引人入胜的故事情节。试玩链接在这哦（https://kangqingyang.github.io/youkonw22/）。</p>
                 
 < 跨度 style=“ font - family：宋体；”>
                     <h3>🎯 核心特点</h3>
@@ -223,4 +223,5 @@ bgMusic.play().catch() => {
     </script>
 </body>
 </html>
+
 
